--- a/main.html
+++ b/main.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PC Usage Thermostat</title>
+    <link rel="stylesheet" type="text/css" href="main.css"/> 
 </head>
 <body>
+    <!-- https://docs.google.com/document/d/1iJ_IEXd-ura2O9uQArqsKh7EkDOz6huuQDQPb-6XfWk/edit?usp=sharing -->
     <p>test back</p>
+    <div>something in here</div>
+    <div id="thermostat">
+        <div id="white-space">
+            <div id="red-bar"></div>
+        </div>
+    </div>    
+
+    <script src="main.js"></script>
 </body>
 </html>
