--- a/main.html
+++ b/main.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <!-- https://docs.google.com/document/d/1iJ_IEXd-ura2O9uQArqsKh7EkDOz6huuQDQPb-6XfWk/edit?usp=sharing -->
-    <p>test back</p>
-    <div>something in here</div>
+    <h1>Tracking PC usage time</h1>
+    <p>set a timer by giving a time limit</p>
+    <input type="text" id="userInput" placeholder="minutes (number only)">
+    <button id="countButton">Submit</button>
     <div id="thermostat">
         <div id="white-space">
             <div id="red-bar"></div>
