added reset button

--- a/main.html
+++ b/main.html
@@ -17,6 +17,7 @@
             <div id="red-bar"></div>
         </div>
     </div>    
+    <button id="reset">Reset</button>
 
     <script src="main.js"></script>
 </body>
